--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@xstate/react": "^3.1.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "framer-motion": "^8.5.4",
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "xstate": "^4.35.3",
+    "zod": "^3.20.2",
+    "zod-form-data": "^1.2.4"
   }
 }
